# QtPractice

./: CMakeLists.txt  README.md  logmanager.cpp  logmanager.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  serialportmanager.cpp  serialportmanager.h
